# dist/swagger.json
@@ -163,6 +163,64 @@
 			],
 			"type": "object",
 			"additionalProperties": true
+		},
+		"User": {
+			"properties": {
+				"id": {
+					"type": "string"
+				},
+				"username": {
+					"type": "string"
+				},
+				"email": {
+					"type": "string"
+				},
+				"hashedPassword": {
+					"type": "string"
+				},
+				"createdAt": {
+					"type": "string",
+					"format": "date-time"
+				},
+				"updatedAt": {
+					"type": "string",
+					"format": "date-time"
+				},
+				"role": {
+					"type": "string"
+				}
+			},
+			"required": [
+				"id",
+				"username",
+				"email",
+				"hashedPassword",
+				"createdAt",
+				"updatedAt",
+				"role"
+			],
+			"type": "object",
+			"additionalProperties": true
+		},
+		"UserInput": {
+			"properties": {
+				"username": {
+					"type": "string"
+				},
+				"email": {
+					"type": "string"
+				},
+				"password": {
+					"type": "string"
+				}
+			},
+			"required": [
+				"username",
+				"email",
+				"password"
+			],
+			"type": "object",
+			"additionalProperties": true
 		}
 	},
 	"info": {
@@ -243,6 +301,56 @@
 						"name": "url",
 						"required": true,
 						"type": "string"
+					}
+				]
+			}
+		},
+		"/user": {
+			"get": {
+				"operationId": "GetUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/User"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"type": "string"
+					}
+				]
+			},
+			"post": {
+				"operationId": "CreateUser",
+				"produces": [
+					"application/json"
+				],
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"schema": {
+							"$ref": "#/definitions/User"
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "userInput",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/UserInput"
+						}
 					}
 				]
 			}
